docs/apim/4.12/terraform/example-resource-configurations.md
---
description: An overview about gravitee resources.
metaLinks:
  alternates:
    - example-resource-configurations.md
---

# Gravitee Resources

## Overview

Terraform defines resources as basic infrastructure elements. It creates and manages these resources as part of its Infrastructure as Code (IaC) workflow. This lets you use configuration files to automate reproducible and version controlled APIs.

Resources are classified by type, where a resource type is associated with a particular provider. Gravitee's Terraform provider supports several resource types, including v4 APIs, Shared Policy Groups, Applications, and Subscriptions.

To create a resource, you need to add a resource definition to your Terraform configuration file. The definition includes settings such as the resource type, a Human-readable Identifier (hrid) to uniquely identify the resource by name, and arguments to specify other resource parameters.

Terraform uses your configuration files to track the state of your infrastructure. When you update your configuration, Terraform detects the differences between your existing and desired states. It then creates and executes a plan to apply your changes. This is a fully automated alternative to manually updating your APIs in the APIM Console or with mAPI scripts.

## Gravitee resources

The Gravitee Terraform provider supports the following Gravitee resource types:

* v4 HTTP proxy API
* v4 message API
* v4 Native Kafka API
* Shared Policy Group
* Application
* Subscription

Terraform can create, update, or delete these resources as part of its workflow.

{% hint style="info" %}
Guides and examples can be found in the [Gravitee "apim" Terraform Registry documentation](https://registry.terraform.io/providers/gravitee-io/apim/latest/docs).
{% endhint %}

## Release notes

These are the changes for version 0.5.x

### Features

* Application supports multiple mTLS client certificates with optional start/end dates
* Subscription metadata support
* Experimental: API HCL export

### Improvements

* More tutorials in the registry docs
* `failure_condition` and `force_next_endpoint_on_failure` have been added to the API's failover configuration

### Bugs

* Subscription `plan_hrid` update is silently ignored by the API

### Notable changes

* The endpoint name is now mandatory
* Flow phase, hence flow property `connect` has been renamed to `entrypoint_connect` for `NATIVE` APIs

### Known limitations

The following known limitations apply to the 0.5.x version of the Gravitee Terraform provider:

* When you run `terraform plan` for APIs, several differences exist between state and remote. These do not impact runtime and will be fixed in upcoming patches.
  * State stores the dynamic properties service configuration as an encoded JSON string instead of plain JSON.
  * The encrypted properties payload is marked as changed because encrypted values replace unencrypted values.
* APIKey subscriptions are not supported.

### Automation API: missing properties (4.11, Terraform 0.5.x)

| Resource           | Section                   | Missing Property                   | Type                                  | Supported in Automation API                                             |
| ------------------ | ------------------------- | ---------------------------------- | ------------------------------------- | ----------------------------------------------------------------------- |
| apim\_apiv4        |                           | `allowedInApiProducts`             | boolean                               | No                                                                      |
| apim\_apiv4        |                           | `allowMultiJwtOauth2Subscriptions` | boolean                               | No                                                                      |
| apim\_apiv4        | `plans`                   | `commentMessage`                   | string                                | Never will, Subscriptions are always auto-accepted                      |
| apim\_apiv4        | `plans`                   | `commentRequired`                  | boolean                               | Never will, Subscriptions are always auto-accepted                      |
| apim\_apiv4        | `plans`                   | `order`                            | integer                               | Never will, mapped to the list index, UI feature only                   |
| apim\_apiv4        | `listeners.kafka` (Kafka) | `port`                             | integer                               | No                                                                      |
| apim\_application  |                           | `apiKeyMode`                       | enum (SHARED, EXCLUSIVE, UNSPECIFIED) | Only EXCLUSIVE is supported, hence property is absent                   |
| apim\_application  |                           | `type`                             | string                                | No (simple applications)                                                |
| apim\_subscription | `apim_subscriptionSpec`   | `consumerConfiguration`            | object                                | 4.12                                                                    |
| apim\_subscription | `apim_subscriptionSpec`   | `apiKeyMode`                       | enum (SHARED, EXCLUSIVE, UNSPECIFIED) | Only EXCLUSIVE is supported, hence property is absent                   |
| apim\_subscription | `apim_subscriptionSpec`   | `startingAt`                       | date-time                             | Never, Subscriptions are always auto-accepted hence started immediately |
| apim\_subscription | `apim_subscriptionSpec`   | `generalConditionsAccepted`        | boolean                               | Never, Subscriptions are always auto-accepted                           |
| apim\_subscription | `apim_subscriptionSpec`   | `generalConditionsContentRevision` | object (PageRevisionId)               | Never, Subscriptions are always auto-accepted                           |
